# Connect_4

./: .gitignore  CMakeLists.txt  Makefile  README.md  application.cpp  engine.cpp  evaluate.c  game.c  game.cpp  gui.cpp  play-game.c
engine/: evaluate.c  evaluate.cpp  minimax.c  minimax.cpp
include/: application.h  engine.h  evaluate.h  game.h  minimax.h
